--- a/seance5.ipynb
+++ b/seance5.ipynb
@@ -3,9 +3,13 @@
   "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
+      "name": "Python 3.8.5 32-bit",
+      "display_name": "Python 3.8.5 32-bit",
+      "metadata": {
+        "interpreter": {
+          "hash": "c9ba0c4a5af8269c496dad2a440da0741b8e4cd992915eed58c521d280844af4"
+        }
+      }
     },
     "language_info": {
       "codemirror_mode": {
@@ -17,7 +21,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.6"
+      "version": "3.8.5-final"
     },
     "colab": {
       "name": "seance5.ipynb",
@@ -39,14 +43,28 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "cwgZ0Rd9iOcn"
-      },
-      "source": [
-        "dqzd"
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4.0\n"
+          ]
+        }
       ],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "def cal_tauxvariation(f,a,h):\n",
+        "    tauxvariation=(f(a+h)-f(a))/h\n",
+        "    return tauxvariation\n",
+        "\n",
+        "\n",
+        "import sympy\n",
+        "\n",
+        "f = lambdify(x, 3*x**3 +x**2 -5)\n",
+        "print(cal_tauxvariation(f,0,1))"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -65,10 +83,33 @@
         "id": "k-SbwCd1iOc0"
       },
       "source": [
-        ""
+        "def coefdirecteur(fn, a, b,p):\n",
+        "    coef = []\n",
+        "    # on ajoute à la liste le coef directeur entre l'intervall avec un pas p\n",
+        "    for i in range(a,b,p):\n",
+        "        # faire un coef.push\n",
+        "\n",
+        "        return coef\n",
+        "\n",
+        "def fn(x):\n",
+        "    return (1+x)/(x-4)\n",
+        "\n",
+        "coef(fn, 0, 1, 2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'coef' is not defined",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[1;32m<ipython-input-24-86003843bd71>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0mcoef\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m: name 'coef' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -110,10 +151,25 @@
         "id": "Dv2T6piKiOdB"
       },
       "source": [
-        ""
+        "def Find_Sn(n):\n",
+        "    Sn=0\n",
+        "    for i in range(1,n+1):\n",
+        "        Tn=i**2 -(i-1)**2\n",
+        "        Sn+=Tn\n",
+        "    return Sn\n",
+        "\n",
+        "print(Find_Sn(3))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -133,10 +189,45 @@
         "id": "Oas-b4V1iOdH"
       },
       "source": [
-        ""
+        "def deter(e, u0):\n",
+        "    b = 1;\n",
+        "    un = u0\n",
+        "    n = 0;\n",
+        "    while ( b == 1 ):\n",
+        "        un = uN(un)\n",
+        "        print(un)\n",
+        "        if(un < e):\n",
+        "            b = 0\n",
+        "        else:\n",
+        "            n+=1\n",
+        "\n",
+        "    return n;\n",
+        "\n",
+        "def uN(un):\n",
+        "    return 0.5*un\n",
+        "\n",
+        "deter(10, 6)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.0\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -155,7 +246,20 @@
         "id": "jKVKFdLDiOdO"
       },
       "source": [
-        ""
+        "def val_app(epsilon): \n",
+        "    elm1=1\n",
+        "    elm2=elm1-1/(3**2)\n",
+        "    signe=1\n",
+        "    val=5\n",
+        "    while abs(elm2-elm1)>epsilon:\n",
+        "       elm1=elm2\n",
+        "       elm2=elm1+signe*(1/(val**2))\n",
+        "       val+=2\n",
+        "       signe*=(-1)\n",
+        "    return elm2\n",
+        " \n",
+        "# tester la fonction\n",
+        "print(val_app(0.05))"
       ],
       "execution_count": null,
       "outputs": []
@@ -173,6 +277,24 @@
         "Un+1= Un + 2/Un  , n>0.\n",
         "\n",
         "On arrête d’itérer quand l’intervalle entre 2 termes consécutifs devient strictement inférieur à epsilon."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def limite(epsilon):\n",
+        "    U0 = 2\n",
+        "    Un = U0+2/U0\n",
+        "    while abs(Un-U0) > epsilon:\n",
+        "        U0 = Un\n",
+        "        Un = U0+2/U0\n",
+        "    return Un\n",
+        " \n",
+        " \n",
+        "print(limite(0.05))"
       ]
     }
   ]
