--- a/seance5.ipynb
+++ b/seance5.ipynb
@@ -189,43 +189,30 @@
         "id": "Oas-b4V1iOdH"
       },
       "source": [
-        "def deter(e, u0):\n",
-        "    b = 1;\n",
-        "    un = u0\n",
-        "    n = 0;\n",
-        "    while ( b == 1 ):\n",
-        "        un = uN(un)\n",
-        "        print(un)\n",
-        "        if(un < e):\n",
-        "            b = 0\n",
-        "        else:\n",
-        "            n+=1\n",
+        "def find_n(e):\n",
+        "    n = 1\n",
+        "    U0 = 1\n",
+        "    Un = 0.5 * U0\n",
+        "    while (Un > e):\n",
+        "        n+=1\n",
+        "        Un = 0.5 * Un\n",
+        "    return n \n",
         "\n",
-        "    return n;\n",
-        "\n",
-        "def uN(un):\n",
-        "    return 0.5*un\n",
-        "\n",
-        "deter(10, 6)"
+        "find_n(0.1)\n"
       ],
-      "execution_count": 26,
+      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "3.0\n"
+          "output_type": "error",
+          "ename": "UnboundLocalError",
+          "evalue": "local variable 'Un' referenced before assignment",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[1;32m<ipython-input-3-f2855ee7d7ae>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mfind_n\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[1;32m<ipython-input-3-f2855ee7d7ae>\u001b[0m in \u001b[0;36mfind_n\u001b[1;34m(e)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mU0\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mUn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.5\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mUn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[1;32mwhile\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[0mUn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[0mn\u001b[0m\u001b[1;33m+=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'Un' referenced before assignment"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 26
         }
       ]
     },
@@ -246,20 +233,20 @@
         "id": "jKVKFdLDiOdO"
       },
       "source": [
-        "def val_app(epsilon): \n",
-        "    elm1=1\n",
-        "    elm2=elm1-1/(3**2)\n",
-        "    signe=1\n",
-        "    val=5\n",
-        "    while abs(elm2-elm1)>epsilon:\n",
-        "       elm1=elm2\n",
-        "       elm2=elm1+signe*(1/(val**2))\n",
-        "       val+=2\n",
-        "       signe*=(-1)\n",
-        "    return elm2\n",
-        " \n",
-        "# tester la fonction\n",
-        "print(val_app(0.05))"
+        "import numpy as np\n",
+        "def cal_K(epsilon):\n",
+        "    \n",
+        "    kold=((-1)**0)/(1)\n",
+        "    knew=((-1)**1)/(9)+kold\n",
+        "    n=1\n",
+        "    while(np.abs(knew-kold)>epsilon):\n",
+        "        n=n+1\n",
+        "        kold=knew\n",
+        "        knew=knew+((-1)**n)/((2*n+1)**2)\n",
+        "    \n",
+        "    return(knew)\n",
+        "\n",
+        "print(cal_K(0.000000001))"
       ],
       "execution_count": null,
       "outputs": []
@@ -281,9 +268,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "40.07875060343533\n"
+          ]
+        }
+      ],
       "source": [
         "def limite(epsilon):\n",
         "    U0 = 2\n",
@@ -296,6 +291,13 @@
         " \n",
         "print(limite(0.05))"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ]
 }
