--- a/seance5.ipynb
+++ b/seance5.ipynb
@@ -185,47 +185,68 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "Oas-b4V1iOdH"
-      },
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Les 5 premiers termes de la série sont : \n\nU0 = 1\nU1 = 0.5\nU2 = 0.25\nU3 = 0.125\nU4 = 0.0625\n"
+          ]
+        }
+      ],
+      "source": [
+        "## exo personnel \n",
+        "def affiche_suite(n):\n",
+        "\n",
+        "    if n == 0:\n",
+        "        return 1\n",
+        "\n",
+        "    return (affiche_suite(n-1) * 0.5 )\n",
+        "\n",
+        "nbr = int(input('Entrez le nombre de termes'))\n",
+        "\n",
+        "print(f\"Les {nbr} premiers termes de la série sont : \\n\")\n",
+        "\n",
+        "for j in range (nbr):\n",
+        "    \n",
+        "    print(f\"U{j} = {affiche_suite(j)}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "le plus petit entier\u001b[31m n\u001b[0m tel que la valeur de U\u001b[31mn\u001b[0m soit inférieure à \u001b[7m0.1\u001b[0m vaut\u001b[31m 4\u001b[0m et U\u001b[31m4\u001b[0m vaut\u001b[92m 0.0625\n"
+          ]
+        }
+      ],
       "source": [
         "def find_n(e):\n",
         "    n = 1\n",
         "    U0 = 1\n",
         "    Un = 0.5 * U0\n",
-        "    while (Un > e):\n",
+        "    while (Un >= e):\n",
         "        n+=1\n",
         "        Un = 0.5 * Un\n",
         "    return n \n",
         "\n",
-        "find_n(0.1)\n"
-      ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "UnboundLocalError",
-          "evalue": "local variable 'Un' referenced before assignment",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[1;32m<ipython-input-3-f2855ee7d7ae>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mfind_n\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[1;32m<ipython-input-3-f2855ee7d7ae>\u001b[0m in \u001b[0;36mfind_n\u001b[1;34m(e)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mU0\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mUn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.5\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mUn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[1;32mwhile\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[0mUn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[0mn\u001b[0m\u001b[1;33m+=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-            "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'Un' referenced before assignment"
-          ]
-        }
+        "e = float(input('Donner un réel positif'))\n",
+        "print(f\"le plus petit entier\\033[31m n\\033[0m tel que la valeur de U\\033[31mn\\033[0m soit inférieure à \\033[1m{e}\\033[0m vaut\\033[31m {find_n(e)}\\033[0m et U\\033[31m{find_n(e)}\\033[0m vaut\\033[92m {affiche_suite(find_n(e))}\")\n"
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Lcy6h3K7iOdN"
-      },
       "source": [
-        "Ex6: Constante K de Catalan : https://fr.wikipedia.org/wiki/Constante_de_Catalan\n",
-        "Ecrire une fonction qui permet de retourner une valeur approchée de la constante K et en s’arrêtant dès que la valeur absolue de la différence entre deux somme successives devienne inférieure ou égale à une erreur epsilon donnée en paramètre.\n",
-        "\n"
-      ]
+        "Ex6: Constante K de Catalan : https://fr.wikipedia.org/wiki/Constante_de_Catalan Ecrire une fonction qui permet de retourner une valeur approchée de la constante K et en s’arrêtant dès que la valeur absolue de la différence entre deux somme successives devienne inférieure ou égale à une erreur epsilon donnée en paramètre."
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     },
     {
       "cell_type": "code",
