--- a/seance5.ipynb
+++ b/seance5.ipynb
@@ -43,14 +43,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4.0\n"
+            "43.0\n"
           ]
         }
       ],
@@ -59,11 +59,10 @@
         "    tauxvariation=(f(a+h)-f(a))/h\n",
         "    return tauxvariation\n",
         "\n",
-        "\n",
-        "import sympy\n",
-        "\n",
+        "from sympy.utilities.lambdify import lambdify\n",
+        "from sympy.abc import x, y, z\n",
         "f = lambdify(x, 3*x**3 +x**2 -5)\n",
-        "print(cal_tauxvariation(f,0,1))"
+        "print(cal_tauxvariation(f,1,2))"
       ]
     },
     {
@@ -96,7 +95,7 @@
         "\n",
         "coef(fn, 0, 1, 2)"
       ],
-      "execution_count": 24,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "error",
@@ -105,7 +104,7 @@
           "traceback": [
             "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[1;32m<ipython-input-24-86003843bd71>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0mcoef\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[1;32m<ipython-input-65-86003843bd71>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0mcoef\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[1;31mNameError\u001b[0m: name 'coef' is not defined"
           ]
         }
@@ -129,21 +128,42 @@
         "id": "yE_s3APoiOc7"
       },
       "source": [
-        ""
+        "def afficherec(n, U0): \n",
+        "\n",
+        "    if n == 0:\n",
+        "        return U0\n",
+        "\n",
+        "    return (afficherec(n-1, U0) + n) # Récursivité\n",
+        "\n",
+        "nbr = int(input('Entrez le nombre de termes'))\n",
+        "U0 = int(input('Entrez le premier terme U0 : '))\n",
+        "\n",
+        "print(f\"Les {nbr} premiers termes de la série sont : \\n\")\n",
+        "\n",
+        "for j in range (nbr):\n",
+        "    print(f\"U{j} = {afficherec(j,U0)}\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Les 10 premiers termes de la série sont : \n\nU0 = 1\nU1 = 2\nU2 = 4\nU3 = 7\nU4 = 11\nU5 = 16\nU6 = 22\nU7 = 29\nU8 = 37\nU9 = 46\n"
+          ]
+        }
+      ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "YbEq1M_BiOdA"
-      },
       "source": [
         "Ex4:\n",
         "On pose Tn=n^2−(n−1)^2 ainsi que Sn=T1+T2+T3+...+Tn.\n",
         "1. Etant donné n, afficher la valeur de Sn."
-      ]
+      ],
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YbEq1M_BiOdA"
+      }
     },
     {
       "cell_type": "code",
@@ -154,13 +174,13 @@
         "def Find_Sn(n):\n",
         "    Sn=0\n",
         "    for i in range(1,n+1):\n",
-        "        Tn=i**2 -(i-1)**2\n",
+        "        Tn=i**2 - (i-1)**2\n",
         "        Sn+=Tn\n",
         "    return Sn\n",
         "\n",
         "print(Find_Sn(3))"
       ],
-      "execution_count": 17,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,60 +205,101 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Les 5 premiers termes de la série sont : \n\nU0 = 1\nU1 = 0.5\nU2 = 0.25\nU3 = 0.125\nU4 = 0.0625\n"
+            "Les 10 premiers termes de la série sont : \n\nU0 = 1\nU1 = 0.5\nU2 = 0.25\nU3 = 0.125\nU4 = 0.0625\nU5 = 0.03125\nU6 = 0.015625\nU7 = 0.0078125\nU8 = 0.00390625\nU9 = 0.001953125\n"
           ]
         }
       ],
       "source": [
-        "## exo personnel \n",
-        "def affiche_suite(n):\n",
+        "## exo personnel (récursivité)\n",
+        "def affiche_suite(n,U0):\n",
+        "    \n",
         "\n",
         "    if n == 0:\n",
-        "        return 1\n",
+        "        return U0\n",
         "\n",
-        "    return (affiche_suite(n-1) * 0.5 )\n",
+        "    return (affiche_suite(n-1, U0) * 0.5)\n",
         "\n",
         "nbr = int(input('Entrez le nombre de termes'))\n",
+        "U0 = int(input('Entrez le premier terme U0 : '))\n",
         "\n",
         "print(f\"Les {nbr} premiers termes de la série sont : \\n\")\n",
         "\n",
         "for j in range (nbr):\n",
         "    \n",
-        "    print(f\"U{j} = {affiche_suite(j)}\")"
+        "    print(f\"U{j} = {(affiche_suite(j,U0))}\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
-      "metadata": {},
+      "execution_count": 30,
+      "metadata": {
+        "tags": []
+      },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "le plus petit entier\u001b[31m n\u001b[0m tel que la valeur de U\u001b[31mn\u001b[0m soit inférieure à \u001b[7m0.1\u001b[0m vaut\u001b[31m 4\u001b[0m et U\u001b[31m4\u001b[0m vaut\u001b[92m 0.0625\n"
+            "U0 = 1\nU1 = 0.5\nU2 = 0.25\nU3 = 0.125\nU4 = 0.0625\nU5 = 0.03125\nU6 = 0.015625\nU7 = 0.0078125\nU8 = 0.00390625\nU9 = 0.001953125\n"
           ]
         }
       ],
       "source": [
-        "def find_n(e):\n",
+        "##Exo perso : par itération \n",
+        "def affiche_suite2(n,U0):\n",
+        "    terme1 = U0\n",
+        "    prochainTerme = 0\n",
+        "    for i in range(0,n):\n",
+        "        if (i == 0):\n",
+        "            print(f'U{i} = {terme1}')\n",
+        "        else:\n",
+        "            prochainTerme = terme1 * 0.5\n",
+        "            print(f'U{i} = {prochainTerme}')\n",
+        "            terme1 = prochainTerme\n",
+        "n = int(input('Entrez le nombre de termes'))\n",
+        "U0 = int(input('Entrez le premier terme U0'))\n",
+        "affiche_suite2(n,U0)\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "affiche_suite() missing 1 required positional argument: 'U0'",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[1;32m<ipython-input-31-2295c572cd95>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0me\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Donner un réel positif: '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mU0\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Donner la valeur du premier terme U0:'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"le plus petit entier\\033[31m n\\033[0m tel que la valeur de U\\033[31mn\\033[0m soit inférieure à \\033[1m {e}\\033[0m vaut\\033[31m {find_n(e,U0)}\\033[0m et U\\033[31m{find_n(e,U0)}\\033[0m vaut\\033[92m {affiche_suite(find_n(e,U0))}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[1;31mTypeError\u001b[0m: affiche_suite() missing 1 required positional argument: 'U0'"
+          ]
+        }
+      ],
+      "source": [
+        "def find_n(e,U0):\n",
         "    n = 1\n",
-        "    U0 = 1\n",
         "    Un = 0.5 * U0\n",
         "    while (Un >= e):\n",
         "        n+=1\n",
-        "        Un = 0.5 * Un\n",
+        "        Un =  Un * 0.5\n",
         "    return n \n",
         "\n",
-        "e = float(input('Donner un réel positif'))\n",
-        "print(f\"le plus petit entier\\033[31m n\\033[0m tel que la valeur de U\\033[31mn\\033[0m soit inférieure à \\033[1m{e}\\033[0m vaut\\033[31m {find_n(e)}\\033[0m et U\\033[31m{find_n(e)}\\033[0m vaut\\033[92m {affiche_suite(find_n(e))}\")\n"
+        "e = float(input('Donner un réel positif: '))\n",
+        "U0 = int(input('Donner la valeur du premier terme U0:'))\n",
+        "print(f\"le plus petit entier\\033[31m n\\033[0m tel que la valeur de U\\033[31mn\\033[0m soit inférieure à \\033[1m {e}\\033[0m vaut\\033[31m {find_n(e,U0)}\\033[0m et U\\033[31m{find_n(e,U0)}\\033[0m vaut\\033[92m {affiche_suite(find_n(e,U0),U0)}\")\n"
       ]
     },
     {
@@ -269,8 +330,16 @@
         "\n",
         "print(cal_K(0.000000001))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.9159655936772525\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -289,14 +358,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "40.07875060343533\n"
+            "3.6666666666666665\n"
           ]
         }
       ],
@@ -304,13 +373,13 @@
         "def limite(epsilon):\n",
         "    U0 = 2\n",
         "    Un = U0+2/U0\n",
-        "    while abs(Un-U0) > epsilon:\n",
+        "    while abs(Un-U0) >= epsilon:\n",
         "        U0 = Un\n",
         "        Un = U0+2/U0\n",
         "    return Un\n",
         " \n",
         " \n",
-        "print(limite(0.05))"
+        "print(limite(1))"
       ]
     },
     {
