--- a/seance5.ipynb
+++ b/seance5.ipynb
@@ -143,7 +143,7 @@
         "for j in range (nbr):\n",
         "    print(f\"U{j} = {afficherec(j,U0)}\")"
       ],
-      "execution_count": 24,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,8 +205,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
-      "metadata": {},
+      "execution_count": 37,
+      "metadata": {
+        "tags": []
+      },
       "outputs": [
         {
           "output_type": "stream",
@@ -256,7 +258,7 @@
         "def affiche_suite2(n,U0):\n",
         "    terme1 = U0\n",
         "    prochainTerme = 0\n",
-        "    for i in range(0,n):\n",
+        "    for i in range(n):\n",
         "        if (i == 0):\n",
         "            print(f'U{i} = {terme1}')\n",
         "        else:\n",
@@ -273,18 +275,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "affiche_suite() missing 1 required positional argument: 'U0'",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[1;32m<ipython-input-31-2295c572cd95>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0me\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Donner un réel positif: '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mU0\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Donner la valeur du premier terme U0:'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"le plus petit entier\\033[31m n\\033[0m tel que la valeur de U\\033[31mn\\033[0m soit inférieure à \\033[1m {e}\\033[0m vaut\\033[31m {find_n(e,U0)}\\033[0m et U\\033[31m{find_n(e,U0)}\\033[0m vaut\\033[92m {affiche_suite(find_n(e,U0))}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[1;31mTypeError\u001b[0m: affiche_suite() missing 1 required positional argument: 'U0'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "le plus petit entier\u001b[31m n\u001b[0m tel que la valeur de U\u001b[31mn\u001b[0m soit inférieure à \u001b[1m 0.1\u001b[0m vaut\u001b[31m 4\u001b[0m et U\u001b[31m4\u001b[0m vaut\u001b[92m 0.0625\n"
           ]
         }
       ],
