--- a/seance5.ipynb
+++ b/seance5.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
-      "name": "Python 3.8.5 32-bit",
+      "name": "python3",
       "display_name": "Python 3.8.5 32-bit",
       "metadata": {
         "interpreter": {
@@ -143,7 +143,7 @@
         "for j in range (nbr):\n",
         "    print(f\"U{j} = {afficherec(j,U0)}\")"
       ],
-      "execution_count": 34,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,6 +152,33 @@
             "Les 10 premiers termes de la série sont : \n\nU0 = 1\nU1 = 2\nU2 = 4\nU3 = 7\nU4 = 11\nU5 = 16\nU6 = 22\nU7 = 29\nU8 = 37\nU9 = 46\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 57,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Les 10 premiers termes de la série sont : \n\nU0 = 1\nU1 = 2\nU2 = 4\nU3 = 7\nU4 = 11\nU5 = 16\nU6 = 22\nU7 = 29\nU8 = 37\nU9 = 46\n"
+          ]
+        }
+      ],
+      "source": [
+        "def afficheiter(n, u):\n",
+        "    for i in range(n):\n",
+        "        u=u+i+1\n",
+        "    return u\n",
+        "\n",
+        "nbr = int(input('Entrez le nombre de termes'))\n",
+        "U0 = int(input('Entrez le premier terme U0 : '))\n",
+        "print(f\"Les {nbr} premiers termes de la série sont : \\n\")\n",
+        "\n",
+        "for j in range (nbr):\n",
+        "    print(f\"U{j} = {afficheiter(j,U0)}\")\n"
       ]
     },
     {
@@ -178,15 +205,15 @@
         "        Sn+=Tn\n",
         "    return Sn\n",
         "\n",
-        "print(Find_Sn(3))"
+        "print(Find_Sn(1))"
       ],
-      "execution_count": 66,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "9\n"
+            "1\n"
           ]
         }
       ]
@@ -240,7 +267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 3,
       "metadata": {
         "tags": []
       },
@@ -270,6 +297,34 @@
         "affiche_suite2(n,U0)\n",
         "\n",
         "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "U0 = 1\nU1 = 0.5\nU2 = 0.25\nU3 = 0.125\nU4 = 0.0625\nU5 = 0.03125\nU6 = 0.015625\nU7 = 0.0078125\nU8 = 0.00390625\nU9 = 0.001953125\n"
+          ]
+        }
+      ],
+      "source": [
+        "def affiche_suite3(n, u):\n",
+        "    for i in range(n):\n",
+        "        u = 0.5 * u\n",
+        "    return u\n",
+        "\n",
+        "nbr = int(input('Entrez le nombre de termes'))\n",
+        "U0 = int(input('Entrez le premier terme U0'))\n",
+        "\n",
+        "for j in range(nbr):\n",
+        " print(f\"U{j} = {(affiche_suite3(j,U0))}\")\n",
         "\n"
       ]
     },
